wip - moving some files from closed source repos
Authored-by: Connor Braa <cbraa@pivotal.io>

--- a/operations/add-eirini.yml
+++ b/operations/add-eirini.yml
@@ -2,7 +2,7 @@
 - type: replace
   path: /instance_groups/-
   value:
-    name: eirini
+    name: opi
     release: eirini
     azs: [z1]
     instances: 1
